# flying-discs

./: .gitignore  CONTRIBUTING.md  README.md  makefile  mypy.ini  pylintrc  pyproject.toml  pytest.ini  version.py
.github/workflows/: checks.yml  release.yml  repo.yml
examples/: morrison.ipynb  morrison.py  morrison_linear.py
notebooks/: frispy-jax-comparison.ipynb  frispy-notebook.ipynb  frispy-notebook.py  morrison-constant-comparison.ipynb  morrison-constant-comparison.py  morrison.ipynb  morrison.py
requirements/: dev.txt  main.txt
src/flying_discs/: disc.py  disc_position.py  disc_state.py  utils.py
src/flying_discs/frispy/: base.py  constants.py  coordinates.py
src/flying_discs/frispy/jax_backend/: disc.py  eom.py  model.py
src/flying_discs/frispy/lib/: disc.py  eom.py  model.py
src/flying_discs/frispy/scipy_backend/: disc.py  eom.py
src/flying_discs/morrison/: base.py  bezier.py  constants.py  coordinates.py  disc_morrison_base.py  disc_morrison_bezier.py  disc_morrison_linear.py  linear.py  morrison_constants.py  morrison_position.py
tests/: test_disc.py  test_disc_position.py  test_flying_disc_utils.py  test_utils.py
tests/frispy/jax_backend/: test_disc.py  test_eom.py  test_model.py
tests/frispy/lib/: test_disc.py  test_eom.py  test_model.py
tests/frispy/scipy_backend/: test_disc.py  test_eom.py  test_model.py
tests/morrison/: test_base.py  test_bezier.py  test_constants.py  test_disc_morrison_base.py  test_disc_morrison_bezier.py  test_disc_morrison_linear.py  test_linear.py  test_morrison_constants.py  test_morrison_position.py
