[project]
dynamic = ["version"]
name = "flying-discs"
license = "LGPL-3.0-only"
license-files = { paths = ["LICENSE"] }
readme = "README.md"
description = "Implementation of physical models for flying sport discs."
requires-python = ">=3.9"
authors = [
    { name = "Reto Barmettler"},
]
dependencies = [
    "numpy>=1.22.0",
    "frispy"
]
classifiers =[
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Source = "https://github.com/crzdg/flying-discs"

[project.optional-dependencies]
dev = [
    "hatch",
]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]
type = [
    "mypy",
    "types-PyYAML",
]
style = [
    "black",
    "isort",
]
lint = [
    "pylint",
]
ci = [
    "hatch",
    "hatch-regex-commit",
    "genbadge[all]",
]
jupyter = [
    "jupyter",
    "matplotlib"
]

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/flying_discs"
]

[tool.hatch]
version.source = "regex_commit"
version.path = "version.py"
version.tag_sign = false


[tool.hatch.envs.style]
features = [
    "style"
]
scripts.check = [
  "- black --check --diff src/",
  "isort --check-only --diff src/"
]
scripts.fmt = [
  "black src/",
  "isort src/"
]

[tool.hatch.envs.lint]
features = [
    "lint"
]
scripts.lint = "pylint --recursive=True src/"

[[tool.hatch.envs.lint.matrix]]
python = [
    "311"
]

[tool.hatch.envs.type]
features = [
    "type"
]
scripts.typing = "mypy src/"

[[tool.hatch.envs.type.matrix]]
python = [
    "39", "310", "311"
]

[tool.hatch.envs.test]
features = [
    "test"
]
scripts.cov = "pytest --cov-report=term-missing --cov-report xml:.coverage.xml --cov-config=pyproject.toml --cov=flying_discs --junitxml=.junit.xml {args}"
scripts.no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = [
    "39", "310", "311"
]

[tool.hatch.envs.tools]
scripts.update = "pip-compile {args} pyproject.toml"
dependencies = [
    "pip-tools"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
