[project]
dynamic = ["version"]
name = "flying-discs"
license = "LGPL-3.0-only"
license-files = { paths = ["LICENSE"] }
readme = "README.md"
description = "Implementation of physical models for flying sport discs."
requires-python = ">=3.10"
authors = [
    { name = "Reto Barmettler"},
]
dependencies = [
    "numpy==2.*",
    "scipy==1.*",
    "diffrax==0.*"
]
classifiers =[
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Source = "https://github.com/crzdg/flying-discs"

[project.optional-dependencies]
gpu = [
    "jax[cuda12]"
]
dev = [
    "hatch",
]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]
type = [
    "mypy",
    "types-PyYAML",
]
style = [
    "black",
    "isort",
]
lint = [
    "pylint",
]
ci = [
    "hatch",
    "hatch-regex-commit",
    "genbadge[all]",
]
jupyter = [
    "jupyter",
    "matplotlib"
]

### BUILD ##
[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/flying_discs", "version.py", "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = [
    "src/flying_discs"
]

[tool.hatch]
version.source = "regex_commit"
version.path = "version.py"
version.tag_sign = false


[tool.hatch.envs.style]
python = "3.14"
features = [
    "style"
]
scripts.check = [
  "- black --target-version py311 --check --diff src/",
  "isort --check-only --diff src/"
]
scripts.fmt = [
  "black --target-version py310 src/",
  "isort src/"
]

[tool.hatch.envs.dev]
features = [
    "lint", "type", "test"
]
scripts.lint = "pylint --recursive=True src/"
scripts.typing = "mypy src/"
scripts.cov = "pytest --cov-report=term-missing --cov-report xml:.coverage.xml --cov-config=pyproject.toml --cov=flying_discs --junitxml=.junit.xml {args}"
scripts.no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.dev.matrix]]
python = [
    "311", "312", "313", "314"
]

[tool.hatch.envs.tools]
python = "3.11"
scripts.update = "pip-compile {args} pyproject.toml"
dependencies = [
    "pip-tools"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
